# A3DM

./: .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20260325143000_add-users-token-version.sql
src/: config.rs  files.rs
src/auth/: ldap.rs  mod.rs  models.rs  routes.rs
src/model/: routes.rs
src/user/: models.rs
